gba_test_macros/tests/trybuild/not_a_function.stderr
error: expected `fn`
 --> tests/trybuild/not_a_function.rs:4:7
  |
4 | const FOO: usize = 0;
  |       ^^^
